<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>me.wonwoo</groupId>
    <artifactId>spring-boot-scala</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>1.4.1.RELEASE</version>
    </parent>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>1.8</java.version>
        <!--<start-class>me.wonwoo.Application</start-class>-->
        <scala.version>2.13.1</scala.version>
        <scala.binary.version>2.11</scala.binary.version>
        <org.modelmapper>0.7.5</org.modelmapper>
        <docker.image.prefix>spring-scala</docker.image.prefix>
    </properties>


    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>

        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
        </dependency>

        <dependency>
            <groupId>com.jayway.jsonpath</groupId>
            <artifactId>json-path</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
        </dependency>

        <dependency>
            <groupId>org.scala-lang</groupId>
            <artifactId>scala-library</artifactId>
            <version>${scala.version}</version>
        </dependency>

        <dependency>
            <groupId>org.scala-lang</groupId>
            <artifactId>scala-compiler</artifactId>
            <version>${scala.version}</version>
        </dependency>
    </dependencies>


    <build>
        <sourceDirectory>src/main/scala</sourceDirectory>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>

            <plugin>
                <groupId>net.alchim31.maven</groupId>
                <artifactId>scala-maven-plugin</artifactId>
                <version>3.2.1</version>
                <executions>
                    <execution>
                        <id>compile-scala</id>
                        <phase>compile</phase>
                        <goals>
                            <goal>add-source</goal>
                            <goal>compile</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>test-compile-scala</id>
                        <phase>test-compile</phase>
                        <goals>
                            <goal>add-source</goal>
                            <goal>testCompile</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <recompileMode>incremental</recompileMode>
                    <scalaVersion>${scala.version}</scalaVersion>
                    <args>
                        <arg>-deprecation</arg>
                    </args>
                    <jvmArgs>
                        <jvmArg>-Xms64m</jvmArg>
                        <jvmArg>-Xmx1024m</jvmArg>
                    </jvmArgs>
                </configuration>
            </plugin>

            <plugin>
                <groupId>com.spotify</groupId>
                <artifactId>docker-maven-plugin</artifactId>
                <version>0.3.8</version>
                <configuration>
                    <imageName>${docker.image.prefix}/${project.artifactId}</imageName>
                    <dockerDirectory>src/main/docker</dockerDirectory>
                    <resources>
                        <resource>
                            <targetPath>/</targetPath>
                            <directory>${project.build.directory}</directory>
                            <include>${project.build.finalName}.jar</include>
                        </resource>
                    </resources>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!--<plugin>-->
                <!--<groupId>net.alchim31.maven</groupId>-->
                <!--<artifactId>scala-maven-plugin</artifactId>-->
                <!--&lt;!&ndash; The scala-maven-plugin is used for compiling/testing/running/documenting scala code in maven &ndash;&gt;-->
                <!--<version>3.2.2</version>-->
                <!--<configuration>-->
                    <!--<scalaVersion>${scala.version}</scalaVersion>-->
                    <!--<scalaCompatVersion>${scala.binary.version}</scalaCompatVersion>-->
                    <!--<recompileMode>incremental</recompileMode>-->
                    <!--<useZincServer>false</useZincServer>-->
                    <!--<args>-->
                        <!--<arg>-unchecked</arg>-->
                        <!--<arg>-deprecation</arg>-->
                        <!--<arg>-feature</arg>-->
                    <!--</args>-->
                    <!--<jvmArgs>-->
                        <!--&lt;!&ndash;<jvmArg>-Xss2m</jvmArg>&ndash;&gt;-->
                        <!--<jvmArg>-Xms512M</jvmArg>-->
                        <!--<jvmArg>-Xmx2048M</jvmArg>-->
                        <!--<jvmArg>-XX:MaxPermSize=2048M</jvmArg>-->
                        <!--<jvmArg>-XX:+CMSClassUnloadingEnabled</jvmArg>-->
                    <!--</jvmArgs>-->
                    <!--<javacArgs>-->
                        <!--<javacArg>-source</javacArg>-->
                        <!--<javacArg>${java.version}</javacArg>-->
                        <!--<javacArg>-target</javacArg>-->
                        <!--<javacArg>${java.version}</javacArg>-->
                        <!--<javacArg>-Xlint:all,-serial,-path</javacArg>-->
                    <!--</javacArgs>-->
                <!--</configuration>-->
                <!--<executions>-->
                    <!--<execution>-->
                        <!--<id>scala-compile-first</id>-->
                        <!--<phase>process-resources</phase>-->
                        <!--<goals>-->
                            <!--<goal>add-source</goal>-->
                            <!--<goal>compile</goal>-->
                        <!--</goals>-->
                    <!--</execution>-->
                    <!--<execution>-->
                        <!--<id>scala-test-compile</id>-->
                        <!--<phase>process-test-resources</phase>-->
                        <!--<goals>-->
                            <!--<goal>testCompile</goal>-->
                        <!--</goals>-->
                    <!--</execution>-->
                <!--</executions>-->
            <!--</plugin>-->
        </plugins>
    </build>
</project>